--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -1,7 +1,13 @@
 * {
     box-sizing: border-box;
+    --theme--color: #52B6FF;
+    --theme--color--dark: #126BA5;
+    --error: #FB6B6B;
+    --input--placeholder: #DBDBDB;
+    --input--loading: #F2F2F2;
 }
 
 body {
+    background-color: #E5E5E5;
     font-family: 'Lexend Deca', sans-serif;
 }
