--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -5,6 +5,8 @@
     --error: #FB6B6B;
     --input--placeholder: #DBDBDB;
     --input--loading: #F2F2F2;
+    --habit--pending: #BABABA;
+    --habit--concluded: #8FC549;
 }
 
 body {
