Changed the way concluded percentage is calculated

--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    
     --theme--color: #52B6FF;
     --theme--color--dark: #126BA5;
     --error: #FB6B6B;
